--- a/.github/workflows/update_ports.yml
+++ b/.github/workflows/update_ports.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           python-version: 3.12
 
-      - run: python update_port.py
+      - run: python update_ports.py
 
       - name: Add & Commit
         uses: EndBug/add-and-commit@v9
