--- a/.github/workflows/update_git_trees.yml
+++ b/.github/workflows/update_git_trees.yml
@@ -31,4 +31,4 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
-          message: "ci: update git-tree"
+          message: "ci: update git-trees"
