--- a/.github/workflows/update_ports.yml
+++ b/.github/workflows/update_ports.yml
@@ -30,4 +30,4 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
-          message: "ci: update vcpkg port"
+          message: "ci: update vcpkg ports"
