--- a/.github/workflows/update_git_trees.yml
+++ b/.github/workflows/update_git_trees.yml
@@ -32,3 +32,10 @@ jobs:
         with:
           default_author: github_actions
           message: "ci: update git-trees"
+
+      - name: Repository Dispatch
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.REPOSITORY_DISPATCH_TOKEN }}
+          repository: ThirdEyeSqueegee/CommonLibSSE-NG
+          event-type: update-baselines-event
