--- a/.github/workflows/update_vcpkg_port.yml
+++ b/.github/workflows/update_vcpkg_port.yml
@@ -3,6 +3,8 @@ name: Update vcpkg port
 on:
   schedule:
     - cron: 0 */6 * * *
+  repository_dispatch:
+    types: [update-clib-port-event]
   workflow_dispatch:
 
 permissions: write-all
